# Flask-API-AWS-LiveStream

./: README.md  pyproject.toml  wsgi.py
src/domain/: exceptions.py  model.py  validators.py
src/entrypoints/api/: app.py  config.py
src/entrypoints/api/rest/: convert.py
src/repository/: memrepo.py
src/serializers/: model.py
src/service/: converters.py  validators.py
test/: conftest.py  test_models.py  test_repository.py  test_rest.py  test_serializers.py  test_service.py  test_use_cases.py
