[tool.poetry]
name = "aws_flask_api_recording"
version = "0.1.0"
description = "Simple Flask API with AWS"
authors = ["Shahriyar Rzayev <rzayev.sehriyar@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
